@@ -1,4 +1,8 @@
 
+2009-04-17  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Back to use svnmerge.py from trunk
+
 2009-04-11  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Removing libtool files
